[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dns-validator"
version = "2.7.0"
authors = [
    {name = "Matisse Urquhart", email = "me@maturqu.com"},
]
description = "A comprehensive DNS validation tool with modular architecture, analytics, bulk processing, and provider integrations"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
keywords = ["dns", "validation", "delegation", "propagation", "cloudflare", "nameservers", "cli", "analytics", "bulk-processing", "modular-architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "dnspython>=2.3.0",
    "requests>=2.28.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "pycryptodome>=3.15.0",
    "cryptography>=41.0.0",
    "setuptools>=65.5.0",
    "certifi>=2022.12.7",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.8.0"]
cloud = [
    "boto3>=1.26.0",
    "google-cloud-dns>=0.34.0",
    "azure-mgmt-dns>=8.0.0",
    "azure-identity>=1.12.0",
    "azure-core>=1.24.0",
]
ssl = ["pyOpenSSL>=23.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
]
all = [
    "pyperclip>=1.8.0",
    "boto3>=1.26.0",
    "google-cloud-dns>=0.34.0",
    "azure-mgmt-dns>=8.0.0",
    "azure-identity>=1.12.0",
    "azure-core>=1.24.0",
    "pyOpenSSL>=23.0.0",
]

[project.scripts]
dns-validator = "dns_validator.dns_validator:cli"
dnsval = "dns_validator.dns_validator:cli"

[project.urls]
Homepage = "https://github.com/HereLiesHugo/dns-validator"
"Bug Reports" = "https://github.com/HereLiesHugo/dns-validator/issues"
Source = "https://github.com/HereLiesHugo/dns-validator"
Documentation = "https://github.com/HereLiesHugo/dns-validator#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["dns_validator*"]

[tool.setuptools.package-data]
dns_validator = ["*.py"]

[tool.black]
line-length = 127
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"